--- a/src/components/FullScreen/index.module.css
+++ b/src/components/FullScreen/index.module.css
@@ -1,5 +1,5 @@
 .fullscreen{
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     bottom: 0;
     left: 0;
@@ -7,4 +7,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 999;
 }
