--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@ html, body, body > div {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  background-color: #909090;
+  /* font-family: 'Poppins', sans-serif; */
+  /* background-color: #909090; */
   color: white;
 }
 
