--- a/src/index.css
+++ b/src/index.css
@@ -7,15 +7,22 @@
 }
 
 html, body, body > div {
-  height: 100%;
+  /* height: 100%; */
 }
 
 body {
   /* font-family: 'Poppins', sans-serif; */
   /* background-color: #909090; */
-  color: white;
+  color: black;
 }
 
-a {
+.ant-btn-link span, a {
   text-decoration: none;
+  color: #038d77;
 }
+
+span:hover, a:hover{
+  color: #6f6f6f ;
+}
+
+
