--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,9 @@ span:hover, a:hover{
 .ant-tabs-tab:not(.ant-tabs-tab-active) {
   background-color: #6f6f6f6f !important;
 }
+
+
+.ant-tooltip,
+.ant-popover {
+  cursor: default !important;
+}
